--- a/index.html
+++ b/index.html
@@ -85,14 +85,43 @@
             >Shorten-It is an efficient and easy-to-use URL shortening service
             that streamlines your online experience.</span
           >
-          <lottie-player
-            src="https://lottie.host/07609b8c-950d-401b-8045-3b3869888f1a/RJMuOxRJGB.json"
-            background="transparent"
-            speed="0.5"
-            style="width: 300px; height: 300px"
-            loop
-            autoplay
-          ></lottie-player>
+
+          <div class="lottie-animation">
+            <div class="lottie-animation__first">
+              <div class="lottie-animation__first_textbox">
+                <img
+                  src="/images/ash_bubble-removebg-preview.png"
+                  alt=""
+                  class="lottie-animation__first_image1"
+                />
+                <img
+                  src="/images/blue_q-removebg-preview.png"
+                  alt=""
+                  class="lottie-animation__first_image2"
+                />
+                <span class="lottie-animation__first_text"
+                  >https://sneakers.com/your_link</span
+                >
+              </div>
+            </div>
+            <div class="lottie-animation__second">
+              <div class="lottie-animation__second_textbox">
+                <img
+                  src="/images/blue_buuble-removebg-preview.png"
+                  alt=""
+                  class="lottie-animation__second_image1"
+                />
+                <img
+                  src="/images/grey_tick-removebg-preview.png"
+                  alt=""
+                  class="lottie-animation__second_image2"
+                />
+                <span class="lottie-animation__second_text"
+                  >https://shor.it/1ebd</span
+                >
+              </div>
+            </div>
+          </div>
           <div class="hero__text_input">
             <input
               type="text"
