--- a/index.html
+++ b/index.html
@@ -3,14 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-    <!-- 
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    /> -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -33,7 +26,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <script src="https://unpkg.com/@lottiefiles/hero-player@latest/dist/hero-player.js"></script>
 
     <title>Shortener</title>
 
@@ -86,37 +79,37 @@
             that streamlines your online experience.</span
           >
 
-          <div class="lottie-animation">
-            <div class="lottie-animation__first">
-              <div class="lottie-animation__first_textbox">
+          <div class="hero-animation">
+            <div class="hero-animation__first">
+              <div class="hero-animation__first_textbox">
                 <img
                   src="/images/ash_bubble-removebg-preview.png"
                   alt=""
-                  class="lottie-animation__first_image1"
+                  class="hero-animation__first_image1"
                 />
                 <img
                   src="/images/blue_q-removebg-preview.png"
                   alt=""
-                  class="lottie-animation__first_image2"
+                  class="hero-animation__first_image2"
                 />
-                <span class="lottie-animation__first_text"
+                <span class="hero-animation__first_text"
                   >https://sneakers.com/your_link</span
                 >
               </div>
             </div>
-            <div class="lottie-animation__second">
-              <div class="lottie-animation__second_textbox">
+            <div class="hero-animation__second">
+              <div class="hero-animation__second_textbox">
                 <img
                   src="/images/blue_buuble-removebg-preview.png"
                   alt=""
-                  class="lottie-animation__second_image1"
+                  class="hero-animation__second_image1"
                 />
                 <img
                   src="/images/grey_tick-removebg-preview.png"
                   alt=""
-                  class="lottie-animation__second_image2"
+                  class="hero-animation__second_image2"
                 />
-                <span class="lottie-animation__second_text"
+                <span class="hero-animation__second_text"
                   >https://shor.it/1ebd</span
                 >
               </div>
